2010-06-16  Adam Roben  <aroben@apple.com>

        Convert console messages to UTF-8 before printing them

        Speculative fix for <http://webkit.org/b/40731> REGRESSION (r61234):
        http/tests/security/xssAuditor/embed-tag-null-char.html and
        http/tests/security/xssAuditor/object-embed-tag-null-char.html fail on
        Windows. (I can't test the fix because Apache is crashing on my
        computer.)

        Reviewed by Alexey Proskuryakov.

        * DumpRenderTree/win/DumpRenderTree.cpp:
        (toUTF8): Extracted the code into an overload that takes a wide string
        and a length, then added an overload that takes a wstring.

        * DumpRenderTree/win/DumpRenderTreeWin.h: Declare the new toUTF8
        overload.

        * DumpRenderTree/win/UIDelegate.cpp:
        (UIDelegate::webViewAddMessageToConsole): Use toUTF8 to convert to
        UTF-8 instead of letting printf convert to the current code page.

2010-06-16  Drew Wilson  <atwilson@chromium.org>

        Reviewed by Kent Tamura.

        [Chromium] Plumbing for top-level frame names
        https://bugs.webkit.org/show_bug.cgi?id=40430

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::createView):
        Migrate to new createView() API.
        * DumpRenderTree/chromium/WebViewHost.h:
        Remove obsolete createView() methods, add new createView() API that takes a frameName parameter.

2010-06-16  Diego Gonzalez  <diegohcg@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Scroll wheel event support to graphics based DRT
        https://bugs.webkit.org/show_bug.cgi?id=40577

        * DumpRenderTree/qt/EventSenderQt.cpp:
        (EventSender::continuousMouseScrollBy):
        (EventSender::createGraphicsSceneWheelEvent):
        * DumpRenderTree/qt/EventSenderQt.h:

2010-06-16  Adam Roben  <aroben@apple.com>

        Remove a stray newline from the Windows version of TestNetscapePlugin

        Reviewed by Alexey Proskuryakov.